# student_manage_system

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
studentManagementSystem/: pytest.ini
studentManagementSystem/attendance/: models.py  serializers.py  urls.py  views.py
studentManagementSystem/attendance/migrations/: 0001_initial.py
studentManagementSystem/courses/: models.py  serializers.py  urls.py  views.py
studentManagementSystem/courses/migrations/: 0001_initial.py
studentManagementSystem/grades/: models.py  serializers.py  urls.py  views.py
studentManagementSystem/grades/migrations/: 0001_initial.py  0002_alter_grade_grade.py
studentManagementSystem/notifications/: tasks.py
studentManagementSystem/studentManagementSystem/: asgi.py  celery.py  env_variables.py  settings.py  urls.py  wsgi.py
studentManagementSystem/students/: models.py  serializers.py  urls.py  views.py
studentManagementSystem/students/migrations/: 0001_initial.py
studentManagementSystem/tests/: test_celery_tasks.py  test_course_permissions.py  test_models.py  test_student_caching.py  test_views.py
studentManagementSystem/users/: models.py  permissions.py  serializers.py  urls.py  views.py
studentManagementSystem/users/migrations/: 0001_initial.py
