[tool.poetry]
name = "indv2"
version = "0.1.0"
description = ""
authors = ["hiki7 <rsaliyev03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
djangorestframework = "^3.15.2"
markdown = "^3.7"
django-filter = "^24.3"
psycopg2 = "^2.9.10"
djangorestframework-simplejwt = "^5.3.1"
python-environ = "^0.4.54"
drf-spectacular = "^0.27.2"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"
djoser = "^2.3.1"
django-celery-beat = "^2.7.0"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
